--- a/include/views/default/cockpit2/frontend/restaurants/restaurants.phtml
+++ b/include/views/default/cockpit2/frontend/restaurants/restaurants.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="title"><i class="fa fa-smile-o"></i>Customers<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="title"><i class="fa fa-coffee"></i>Restaurants<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 
 	<div class="box-content2 box-content-table">
 		<table>
@@ -21,22 +21,24 @@
 				<th>Name</th>
 				<th>Phone</th>
 				<th>Address</th>
+				<th>Community</th>
 				<th>Orders</th>
 				<th>Last&nbsp;Order</th>
 			</tr>
-			<tr ng-repeat="customer in customers" ng-attr-tabindex="{{$index+1}}" tab-select="/customer/{{customer.id_user}}">
-				<td class="tb-image-row"><a href="/customer/{{customer.id_user}}">
+			<tr ng-repeat="restaurant in restaurants" ng-attr-tabindex="{{$index+1}}" tab-select="/restaurant/{{restaurant.permalink}}">
+				<td class="tb-image-row"><a href="/restaurant/{{restaurant.permalink}}">
 					<div class="customer-image-crop">
-						<img ng-if="customer.image" class="customer-image" src="{{customer.image}}"></img>
-						<div ng-if="!customer.image" class="customer-image customer-image-null"></div>
+						<img ng-if="restaurant.image" class="customer-image" src="https://i.crunchbutton.com/66x66/{{restaurant.image}}"></img>
+						<div ng-if="!restaurant.image" class="customer-image restaurant-image-null"></div>
 					</div>
 				</a></td>
-				<td><a href="/customer/{{customer.id_user}}">{{customer.id_user}}</a></td>
-				<td>{{customer.name}}</td>
-				<td><a href ng-click="callText(customer.phone)">{{customer.phone | formatPhone}}</a></td>
-				<td>{{customer.address}}</td>
-				<td>{{customer.orders}}</td>
-				<td><span ng-if="customer._order_date"><span am-time-ago="customer._order_date"></span></span></td>
+				<td><a href="/restaurant/{{restaurant.permalink}}">{{restaurant.id_restaurant}}</a></td>
+				<td>{{restaurant.name}}</td>
+				<td><a href ng-click="callText(restaurant.phone)">{{restaurant.phone | formatPhone}}</a></td>
+				<td>{{restaurant.address}}</td>
+				<td>{{restaurant.community}}</td>
+				<td>{{restaurant.orders}}</td>
+				<td><span ng-if="restaurant._order_date"><span am-time-ago="restaurant._order_date"></span></span></td>
 			</tr>
 		</table>
 	</div>
