--- a/include/views/default/cockpit2/frontend/communities/communities.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities.phtml
@@ -1,8 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="title"><i class="fa fa-smile-o"></i>Customers<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
-
+	<h1 class="title"><i class="fa fa-slideshare"></i>Communities<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
@@ -10,9 +9,9 @@
 			</tr>
 		</table>
 	</div>
-	
+
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
-	<ng-include src="'assets/view/listview-customers.html'"></ng-include>
+	<ng-include src="'assets/view/listview-communities.html'"></ng-include>
 	<ng-include src="'assets/view/listview-paging.html'"></ng-include>
 </div>
