--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -16,7 +16,7 @@
 		<div class="support-boxes-column">
 	
 			<div ng-if="order.id_order" class="support-box-wrap">
-				<h1>Order <a href="/order/{{order.id_order}}">#{{order.id_order}}</a></h1>
+				<h1>Order #{{order.id_order}}</h1>
 				<div class="box-content-color">
 					<div class="field-container">
 						<div class="field-row">
