--- a/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
+++ b/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
@@ -12,12 +12,9 @@
 	<div class="divider"></div>
 	<br>
 	
-	<div ng-if="!loading">
-		
-		<div class="support-boxes">
-
-		
-			<div ng-if="restaurant.id_restaurant" class="support-box-wrap">
+	<div>
+		<div class="support-boxes-column">
+			<div class="support-box-wrap">
 				<h1>Details</h1>
 				<div class="box-content-color">
 					<div class="field-container">
@@ -33,10 +30,32 @@
 							<div class="field-key">Address</div>
 							<div class="field-value"><a href ng-click="routeAddress(restaurant.address)">{{restaurant.address}}</a></div>
 						</div>
+						<div class="field-row">
+							<div class="field-key">Delivery by</div>
+							<div class="field-value">@todo</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Relationship</div>
+							<div class="field-value">{{restaurant.formal_relationship ? 'Formal' : 'Informal'}}</div>
+						</div>
+						<div class="field-row">
+							<div class="field-key">Notification Sent</div>
+							<div class="field-value">{{restaurant.order_notifications_sent ? 'Yes' : 'No'}}</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+			
+		<div class="support-boxes-column">
+			<div class="support-box-wrap">
+				<h1>Location</h1>
+				<map zoom="12" center="false" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
+	
+				</map>
+			</div>
+		</div>
+		
 
 		<h1 class="title"><i class="fa fa-car"></i>Orders<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>		
 
