--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -57,6 +57,7 @@
 <script src="/assets/cockpit/js/controllers.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.config.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.community.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.pexcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
@@ -94,3 +95,4 @@
 <script src="/assets/cockpit/js/service.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.view.list.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.pexcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
