--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -19,7 +19,7 @@
 				</table>
 			</li>
 			*/ ?>
-			
+
 			<div ng-if="menu.toggle=='driver'">
 				<a href="/profile" class="menu-link" ng-class="{'nav-active': (navigation.page == 'profile')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
@@ -29,7 +29,7 @@
 						</tr>
 					</table>
 				</a>
-	
+
 				<a href="/drivers/orders" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-orders')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -38,8 +38,8 @@
 						</tr>
 					</table>
 				</a>
-				
-	
+
+
 				<a href="/drivers/shifts" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-shifts')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -48,7 +48,7 @@
 						</tr>
 					</table>
 				</a>
-	
+
 				<a href="/drivers/shifts/schedule" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-shift-preferences')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -57,7 +57,7 @@
 						</tr>
 					</table>
 				</a>
-	
+
 				<a href="/drivers/docs" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-documents')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -66,8 +66,8 @@
 						</tr>
 					</table>
 				</a>
-	
-	
+
+
 				<a href="/drivers/summary" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isDriver) && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -76,8 +76,8 @@
 						</tr>
 					</table>
 				</a>
-				
-	
+
+
 				<a href="/drivers/help" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-help')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -86,7 +86,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a class="menu-link" ng-click="account.logout()" ng-if="account.user.id_admin">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -97,9 +97,9 @@
 				</a>
 
 			</div>
-			
+
 			<div ng-if="menu.toggle=='admin'">
-				
+
 				<a href="/profile" class="menu-link" ng-class="{'nav-active': (navigation.page == 'profile')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -108,7 +108,7 @@
 						</tr>
 					</table>
 				</a>
-	
+
 				<a href="/deploy" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.user.permissions['SERVER-DEPLOY'] || account.user.permissions['SERVER-DEPLOY-ADMIN']) && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'deploy' || navigation.page == 'deploy-server' || navigation.page == 'deploy-version')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -117,7 +117,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/communities" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'communities' || navigation.page == 'community')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -126,7 +126,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/config" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'config' || navigation.page == 'config-rewards')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -135,7 +135,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/customers" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'customers' || navigation.page == 'customer')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -144,7 +144,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/drivers/onboarding" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'drivers-onboarding')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -153,7 +153,7 @@
 						</tr>
 					</table>
 				</a>
-	
+
 				<a href="/orders" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'orders' || navigation.page == 'order')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -162,7 +162,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/restaurants" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'restaurants' || navigation.page == 'restaurant')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -171,7 +171,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/settlement" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'settlement')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -180,7 +180,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/staff" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'staff')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -189,7 +189,7 @@
 						</tr>
 					</table>
 				</a>
-				
+
 				<a href="/tickets" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'tickets' || navigation.page == 'ticket')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -198,7 +198,16 @@
 						</tr>
 					</table>
 				</a>
-				
+
+				<a href="/pexcard/card" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'tickets' || navigation.page == 'pexcard')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-credit-card"></i></td>
+							<td class="side-menu-label">Pex Card</a></td>
+						</tr>
+					</table>
+				</a>
+
 				<a class="menu-link" ng-click="account.logout()" ng-if="account.user.id_admin">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
@@ -206,11 +215,11 @@
 							<td class="side-menu-label">X-it</a></td>
 						</tr>
 					</table>
-				</a>				
+				</a>
 
-				
 
-	
+
+
 
 			</div>
 
